# http-server-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  example.rest  mise.toml  request.rest
dashboard/: CMakeLists.txt
dashboard/assets/: dashboard.html  home.html  index.html
dashboard/src/: main.cc
examples/: CMakeLists.txt
examples/api/: CMakeLists.txt  main.cpp
examples/client/: CMakeLists.txt
examples/client/src/: main.cc
examples/server/: CMakeLists.txt
examples/server/assets/: dashboard.html  home.html  index.html
examples/server/assets/ui/: index.js  styles.css
examples/server/assets2/: index.html
examples/server/src/: main.cc
examples/sslserver/: CMakeLists.txt
examples/sslserver/src/: main.cc
examples/web-starter/: CMakeLists.txt  main.cpp
examples/web-starter/assets/: index.html
examples/web-starter/src/: main.cc  main.cpp
src/: CMakeLists.txt  Dockerfile  client  client.cc  client.h  context.hpp  header.h  header.hpp  logger.h  main.cpp  request.cc  request.cpp  request.h  request.hpp  response.cc  response.cpp  response.h  response.hpp  router.cc  router.cpp  router.h  router.hpp  server.cc  server.cpp  server.h  server.hpp  sslserver.cc  sslserver.h  utils.cc  utils.cpp  utils.h  utils.hpp  websocket.cc  websocket.h  websocketclient.h
static/: index.html
test/: CMakeLists.txt  getenv_test.cc  logger_test.cc  request_test.cc  request_test.cpp  router_test.cc  router_test.cpp  server_test.cc  server_test.cpp  server_test.h  server_test.hpp  tests.cpp  web_app.cpp  websocket_test.cc
test/static/: index.html
